--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /Teorica/** 
 /Bibliografia/** 
 /Labos/Imagenes_para_contraste/** 
+/Labos/Imagenes de pruebas/** 
 **.zip
 **.ipynb_checkpoints
 **.png
