--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /Bibliografia/** 
 /Labos/Imagenes_para_contraste/** 
 /Labos/Imagenes de pruebas/** 
+/EntregableL2/build/**
 **.zip
 **.ipynb_checkpoints
 **.aux
