--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /Bibliografia/** 
 /Labos/Imagenes_para_contraste/** 
 /Labos/Imagenes de pruebas/** 
+/Labos/ColorImagenesRealesTdF/** 
+/Labos/Color-imagenes/** 
 /EntregableL2/build/**
 **.zip
 **.ipynb_checkpoints
